k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scalable-microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: scalable-microservice
  template:
    metadata:
      labels:
        app: scalable-microservice
    spec:
      containers:
      - name: scalable-microservice
        image: dougmagno/scalable-microservice:latest
        ports:
        - containerPort: 80
