k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scalable-microservice-service
spec:
  selector:
    app: scalable-microservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
